<resources>
    <string name="app_name">MyNomadLife</string>
    <string name="content_authority" translatable="false">com.marekhakala.mynomadlifeapp.provider</string>
    <string name="menu_go_up">Go Up</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_filter_done">Done</string>
    <string name="menu_close">Close</string>
    <string name="menu_reset">Reset to default</string>
    <string name="menu_update_data">Update all</string>
    <string name="menu_delete_all_data">Delete all data</string>
    <string name="menu_delete_images">Delele images</string>
    <string name="menu_update_images">Update images</string>
    <string name="menu_update_places_to_work">Update places to work</string>
    <string name="menu_detail_view_add_to_favourites">Add to favourites</string>
    <string name="menu_detail_view_remove_from_favourites">Remove from favourites</string>
    <string name="menu_detail_view_add_to_offline_mode">Add to offline</string>
    <string name="menu_detail_view_remove_from_offline_mode">Remove from offline</string>
    <string name="section_main_list_title">Home</string>
    <string name="section_favourites_list_title">Favourites</string>
    <string name="section_offline_mode_list_title">Offline mode</string>
    <string name="section_filter_title">Filter</string>
    <string name="section_search_title">Search</string>
    <string name="section_settings_title">Settings</string>
    <string name="section_exchange_rates_title">Exchange rates</string>
    <string name="section_about_title">About</string>
    <string name="filter_cheap_text">CHEAP</string>
    <string name="filter_affordable_text">AFFORDABLE</string>
    <string name="filter_expensive_text">EXPENSIVE</string>
    <string name="filter_town_text">TOWN</string>
    <string name="filter_big_city_text">BIG CITY</string>
    <string name="filter_mega_city_text">MEGA CITY</string>
    <string name="filter_slow_internet_text">SLOW\n INTERNET</string>
    <string name="filter_good_internet_text">GOOD\n INTERNET</string>
    <string name="filter_fast_internet_text">FAST\n INTERNET</string>
    <string name="filter_safe_text">SAFE</string>
    <string name="filter_nightlife_text">NIGHTLIFE</string>
    <string name="filter_fun_text">FUN</string>
    <string name="filter_places_to_work_text">PLACES\n TO WORK</string>
    <string name="filter_startup_score_text">STARTUP\n SCORE</string>
    <string name="filter_english_speaking_text">ENGLISH\n SPEAKING</string>
    <string name="filter_friendly_to_foreigners_text">FRIENDLY\n TO FOREIGNERS</string>
    <string name="filter_female_friendly_text">FEMALE\n FRIENDLY</string>
    <string name="filter_gay_friendly_text">GAY\n FRIENDLY</string>
    <string name="city_item_title_placeholder">Berlin</string>
    <string name="city_item_country_placeholder">Germany</string>
    <string name="city_item_speed_placeholder">35 Mbps</string>
    <string name="city_item_temperature_placeholder">24 °C</string>
    <string name="city_item_month_price_placeholder">$2,000 / m</string>
    <string name="city_item_description_placeholder">Berlin</string>
    <string name="city_item_detail_view_scores_title">Scores</string>
    <string name="city_item_detail_view_info_title">Info</string>
    <string name="city_item_detail_view_cost_of_living">Cost of Living</string>
    <string name="city_item_detail_view_places_to_work">Places to Work</string>
    <string name="city_item_detail_view_cost_of_living_period_daily">daily</string>
    <string name="city_item_detail_view_cost_of_living_period_monthly">monthly</string>
    <string name="city_item_detail_view_scores_format" formatted="false">#.##</string>
    <string name="city_item_detail_view_scores_format_full" formatted="false">/10</string>
    <string name="city_item_detail_view_scores_format2_full" formatted="false">/5</string>
    <string name="city_item_detail_view_scores_bad_text">bad</string>
    <string name="city_item_detail_view_scores_good_text">good</string>
    <string name="city_item_detail_view_scores_okay_text">okay</string>
    <string name="city_item_detail_view_scores_great_text">great</string>
    <string name="city_item_detail_view_scores_nomad_score_text">Nomad Score</string>
    <string name="city_item_detail_view_scores_life_score_text">Life Score</string>
    <string name="city_item_detail_view_scores_cost_of_living_text">Cost of living</string>
    <string name="city_item_detail_view_scores_internet_text">Internet</string>
    <string name="city_item_detail_view_scores_fun_text">Fun</string>
    <string name="city_item_detail_view_scores_safety_text">Safety</string>
    <string name="city_item_detail_view_scores_peace_text">Peace</string>
    <string name="city_item_detail_view_scores_nightlife_text">Nightlife</string>
    <string name="city_item_detail_view_scores_free_wifi_in_city_text">Free WiFi in city</string>
    <string name="settings_general_category_title_text">General</string>
    <string name="settings_startup_screen_title_text">Startup screen</string>
    <string name="settings_startup_screen_value">home</string>
    <string name="settings_startup_screen_text">Select your startup screen: Home, Favourites or Offline mode.</string>
    <string name="settings_temperature_unit_title_text">Temperature unit</string>
    <string name="settings_temperature_unit_text">To set the unit of temperature, choose either Celsius or Fahrenheit.</string>
    <string name="settings_temperature_fahrenheit_unit_value">f</string>
    <string name="settings_offline_mode_auto_updates_images_title_text">Allow images for offline mode</string>
    <string name="settings_offline_mode_auto_updates_images_text">This option if selected will allow the application to download images for offline mode.</string>
    <string name="settings_key_startup_screen">startup_screen</string>
    <string name="settings_key_offline_mode_auto_updates_images">offline_mode_auto_updates_images</string>
    <string name="settings_key_temperature_unit_type">temperature_unit_type</string>
    <string name="settings_key_cheap_cost_of_living_from">cheap_cost_of_living_from</string>
    <string name="settings_key_affordable_cost_of_living_from">affordable_cost_of_living_from</string>
    <string name="settings_key_expensive_cost_of_living_from">expensive_cost_of_living_from</string>
    <string name="settings_key_town_population_from">town_population_from</string>
    <string name="settings_key_big_city_population_from">big_city_population_from</string>
    <string name="settings_key_mega_city_from">mega_city_population_from</string>
    <string name="settings_key_slow_internet_from">slow_internet_from</string>
    <string name="settings_key_good_internet_from">good_internet_from</string>
    <string name="settings_key_fast_internet_from">fast_internet_from</string>
    <string name="settings_key_other_filters_nightlife_from">other_filters_nightlife_from</string>
    <string name="settings_key_other_filters_safe_from">other_filters_safe_from</string>
    <string name="settings_key_other_filters_fun_from">other_filters_fun_from</string>
    <string name="settings_key_other_filters_places_to_work_from">other_filters_places_to_work_from</string>
    <string name="settings_key_other_filters_startup_score_from">other_filters_startup_score_from</string>
    <string name="settings_key_other_filters_english_speaking_from">other_filters_english_speaking_from</string>
    <string name="settings_key_other_filters_friendly_to_foreigners_from">other_filters_friendly_to_foreigners_from</string>
    <string name="settings_key_other_filters_female_friendly_from">other_filters_female_friendly_from</string>
    <string name="settings_key_other_filters_gay_friendly_from">other_filters_gay_friendly_from</string>
    <string name="settings_cost_of_living_category_title_text">Filter - Cost of living</string>
    <string name="settings_cheap_cost_of_living_title_text">Cheap to (USD / month)</string>
    <string name="settings_affordable_cost_of_living_title_text">Affordable to (USD / month)</string>
    <string name="settings_expensive_cost_of_living_title_text">Expensive from (USD / month)</string>
    <string name="settings_cheap_cost_of_living_text">To set the cost of living for cheap filter.</string>
    <string name="settings_affordable_cost_of_living_text">To set the cost of living for affordable filter.</string>
    <string name="settings_expensive_cost_of_living_text">To set the cost of living for expensive filter.</string>
    <string name="settings_cheap_cost_of_living_value">1000</string>
    <string name="settings_affordable_cost_of_living_value">2000</string>
    <string name="settings_expensive_cost_of_living_value">5000</string>
    <string name="settings_population_category_title_text">Filter - Population</string>
    <string name="settings_town_population_title_text">Town to (Population)</string>
    <string name="settings_big_city_population_title_text">Big city to (Population)</string>
    <string name="settings_mega_city_population_title_text">Mega city from (Population)</string>
    <string name="settings_town_population_text">To set the population for town filter.</string>
    <string name="settings_big_city_population_text">To set the population for big city filter.</string>
    <string name="settings_mega_city_population_text">To set the population for mega city filter.</string>
    <string name="settings_town_population_value">5000</string>
    <string name="settings_big_city_population_value">100000</string>
    <string name="settings_mega_city_population_value">500000</string>
    <string name="settings_internet_speed_category_title_text">Filter - Internet speed</string>
    <string name="settings_slow_internet_title_text">Slow internet from (Mbps)</string>
    <string name="settings_good_internet_title_text">Good internet from (Mbps)</string>
    <string name="settings_fast_internet_title_text">Fast internet from (Mbps)</string>
    <string name="settings_fast_internet_text">To set the internet speed for fast filter.</string>
    <string name="settings_good_internet_text">To set the internet speed for good filter.</string>
    <string name="settings_slow_internet_text">To set the internet speed for slow filter.</string>
    <string name="settings_fast_internet_value">50</string>
    <string name="settings_good_internet_value">20</string>
    <string name="settings_slow_internet_value">5</string>
    <string name="settings_other_filters_category_title_text">Other filters</string>
    <string name="settings_safe_title_text">Safe (from)</string>
    <string name="settings_safe_value">3</string>
    <string name="settings_nightlife_title_text">Nightlife (from)</string>
    <string name="settings_nightlife_value">3</string>
    <string name="settings_fun_title_text">Fun (from)</string>
    <string name="settings_fun_value">3</string>
    <string name="settings_places_to_work_title_text">Places to work (from)</string>
    <string name="settings_places_to_work_value">3</string>
    <string name="settings_startup_score_title_text">Startup score (from)</string>
    <string name="settings_startup_score_value">4</string>
    <string name="settings_english_speaking_title_text">English speaking (from)</string>
    <string name="settings_english_speaking_value">3</string>
    <string name="settings_friendly_to_foreigners_title_text">Friendly to foreigners (from)</string>
    <string name="settings_friendly_to_foreigners_value">3</string>
    <string name="settings_female_friendly_title_text">Female friendly (from)</string>
    <string name="settings_female_friendly_value">3</string>
    <string name="settings_gay_friendly_title_text">Gay friendly (from)</string>
    <string name="settings_gay_friendly_value">3</string>
</resources>