<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_city_content_container"
    style="@style/ItemCardView">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <!-- City Info Layout -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0">

                <LinearLayout
                    android:id="@+id/item_city_image_layout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/item_city_image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_city_layout_height"
                        android:contentDescription="@string/city_item_description_placeholder"
                        style="@style/CityItemImage"
                        android:src="@drawable/city_placeholder" />
                </LinearLayout>

                <!-- City -->
                <TextView
                    android:id="@+id/item_city_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/item_city_image_layout"
                    android:layout_alignEnd="@id/item_city_image_layout"
                    style="@style/CityItemTitle"
                    android:text="@string/city_item_title_placeholder" />

                <!-- Country -->
                <TextView
                    android:id="@+id/item_city_country_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/item_city_image_layout"
                    android:layout_alignEnd="@id/item_city_image_layout"
                    android:layout_alignTop="@id/item_city_title_text"
                    style="@style/CityItemCountry"
                    android:text="@string/city_item_country_placeholder" />

                <!-- Internet speed -->
                <TextView
                    android:id="@+id/item_city_speed_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/item_city_image_layout"
                    android:layout_alignEnd="@id/item_city_image_layout"
                    style="@style/CityItemInternetSpeed"
                    android:text="@string/city_item_speed_placeholder" />
            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="@dimen/item_city_label_layout_height"
                android:padding="@dimen/item_city_label_padding"
                android:layout_width="match_parent"
                android:background="@color/theme_primary">

                <!-- Temperature -->
                <TextView
                    android:id="@+id/item_city_temperature"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    style="@style/CityItemTemperature"
                    android:text="@string/city_item_temperature_placeholder" />

                <!-- Monthly price -->
                <TextView
                    android:id="@+id/item_city_month_price"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    style="@style/CityItemMonthPrice"
                    android:text="@string/city_item_month_price_placeholder" />
            </LinearLayout>
        </LinearLayout>

        <!-- Favourite button -->
        <com.marekhakala.mynomadlifeapp.UI.Component.FavouriteActionButton
            android:id="@+id/item_city_favourite_fab"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_anchor="@id/item_city_image_layout"
            app:layout_anchorGravity="bottom|right|end"
            style="@style/CityItemFavouriteButton" />
    </android.support.design.widget.CoordinatorLayout>
</android.support.v7.widget.CardView>